# olheiro-olx-action

./: README.md  initial.py  pyproject.toml
.github/workflows/: olheiro.yml
crawler/crawler/: settings.py
crawler/crawler/spiders/: olx.py
